# ChuanQiAll

./: .gitignore
ChuanQiAll/: CMakeLists.txt
ChuanQiAll/cmake/: CMake3rdpartyLibs.cmake  CMakeCommonVariables.cmake  CMakeFunctions.cmake  OxygenPluginFunctions.cmake
ChuanQiAll/engine1/: CMakeLists.txt
ChuanQiAll/engine1/api/: CMakeLists.txt
ChuanQiAll/engine1/api/inc/: api_acquisition_task_xml.h  api_block_descriptor_xml.h  api_block_descriptor_xml_fwd.h  api_channel_config_changed_xml.h  api_channel_dataformat_xml.h  api_channel_list_xml.h  api_channel_mapping_xml.h  api_chuanqi_queries.h  api_config_item_keys.h  api_data_set_descriptor_xml.h  api_data_set_descriptor_xml_fwd.h  api_data_set_xml.h  api_error_codes.h  api_event_ids.h  api_export_xml.h  api_logging.h  api_marker_xml.h  api_measurement_header_data_xml.h  api_message_ids.h  api_message_ids.inc  api_node_list_xml.h  api_property_list_xml.h  api_property_xml.h  api_software_channel_xml.h  api_timebase_xml.h  api_timestamp_xml.h  api_types.h  api_update_channels_xml.h  api_update_config_xml.h  api_utils.h  api_version_xml.h
ChuanQiAll/engine1/api/src/: api_acquisition_task_xml.cpp  api_block_descriptor_xml.cpp  api_channel_config_changed_xml.cpp  api_channel_dataformat_xml.cpp  api_channel_list_xml.cpp  api_channel_mapping_xml.cpp  api_data_set_descriptor_xml.cpp  api_data_set_xml.cpp  api_export_xml.cpp  api_marker_xml.cpp  api_measurement_header_data_xml.cpp  api_property_list_xml.cpp  api_property_xml.cpp  api_software_channel_xml.cpp  api_timebase_xml.cpp  api_timestamp_xml.cpp  api_types.cpp  api_update_channels_xml.cpp  api_update_config_xml.cpp  api_utils.cpp  api_version_xml.cpp  assert_bimap_size.h
ChuanQiAll/engine1/api/unit_tests/: odkapi_block_descriptor_test.cpp  odkapi_data_set_descriptor_test.cpp  odkapi_export_properties_test.cpp  odkapi_start_telegram_test.cpp  odkapi_stream_descriptor_test.cpp  odkapi_update_channels_test.cpp  odkapi_update_config_test.cpp  odkapi_validation_telegram_test.cpp
ChuanQiAll/engine1/base/: CMakeLists.txt  base_api_object_ptr.h  base_basic_values.h  base_if_api_object.h  base_if_host.h  base_if_host_fwd.h  base_if_plugin.h  base_if_value.h  base_message_return_value_holder.h
ChuanQiAll/engine1/core/: CMakeLists.txt
ChuanQiAll/engine1/core/inc/: core_values.h
ChuanQiAll/engine1/core/src/: core_values.cpp
ChuanQiAll/engine1/daq/: CMakeLists.txt
ChuanQiAll/engine1/daq/inc/: daq_exception.h  daq_id.h  daq_manager.h  daq_module.h  daq_mutexpriv.h  daq_object.h  daq_observer_model.h  daq_parameter.h  daq_runcommand.h  daq_runmanager.h  daq_runstate.h  daq_thread.h  daq_timer.h
ChuanQiAll/engine1/daq/src/: daq_exception.cpp  daq_id.cpp  daq_manager.cpp  daq_module.cpp  daq_parameter.cpp  daq_runcommand.cpp  daq_runmanager.cpp  daq_runstate.cpp  daq_thread.cpp
ChuanQiAll/engine1/framework/: CMakeLists.txt
ChuanQiAll/engine1/framework/inc/: fw_block_iterator.h  fw_channels.h  fw_custom_request_handler.h  fw_data_requester.h  fw_exceptions.h  fw_export_instance.h  fw_export_plugin.h  fw_fwd.h  fw_if_message_handler.h  fw_input_channel.h  fw_interfaces.h  fw_plugin_base.h  fw_properties.h  fw_property_list_utils.h  fw_resampler.h  fw_software_channel_instance.h  fw_software_channel_plugin.h  fw_stream_iterator.h  fw_stream_reader.h  fw_version_check.h
ChuanQiAll/engine1/framework/src/: fw_block_iterator.cpp  fw_channels.cpp  fw_custom_request_handler.cpp  fw_data_requester.cpp  fw_export_instance.cpp  fw_export_plugin.cpp  fw_input_channel.cpp  fw_plugin_base.cpp  fw_properties.cpp  fw_property_list_utils.cpp  fw_resampler.cpp  fw_software_channel_instance.cpp  fw_software_channel_plugin.cpp  fw_stream_iterator.cpp  fw_stream_reader.cpp  fw_version_check.cpp
ChuanQiAll/engine1/framework/unit_tests/: odkfw_block_iterator_test.cpp  odkfw_stream_iterator_test.cpp  odkfw_stream_reader_test.cpp
ChuanQiAll/engine1/uni/: CMakeLists.txt
ChuanQiAll/engine1/uni/inc/: uni_assert.h  uni_defines.h  uni_logger.h  uni_string_util.h  uni_uuid.h  uni_xpugixml.h  uni_xpugixml_fwd.h
ChuanQiAll/engine1/uni/src/: uni_xpugixml.cpp
ChuanQiAll/ui/: CMakeLists.txt
ChuanQiAll/ui/CQ_data/: CMakeLists.txt  main.cpp
ChuanQiAll/ui/CQ_data/include/: SqliteBaseDao.hpp  common.h  configrationdao.h  connectionpool.h  dispatch.h  icommunication.h  module_dll.h  recorddao.h  savefuncblock.h  savemodule.h  savesqldata.h  socisqlite3.h  threadpool.hpp
ChuanQiAll/ui/CQ_data/src/: configrationdao.cpp  connectionpool.cpp  module_dll.cpp  recorddao.cpp  savefuncblock.cpp  savemodule.cpp  savesqldata.cpp  socisqlite3.cpp
ChuanQiAll/ui/CQ_load/: CMakeLists.txt  main.cpp
ChuanQiAll/ui/CQ_load/include/: loadcommon.h  loadfuncblock.h  loadmodule.h  module_dll.h  syschannelbuffer.h
ChuanQiAll/ui/CQ_load/src/: loadfuncblock.cpp  loadmodule.cpp  module_dll.cpp  syschannelbuffer.cpp
ChuanQiAll/ui/appinterface/: CMakeLists.txt
ChuanQiAll/ui/appinterface/inc/: app.h  appfactory.cpp  appfactory.h  apploader.h  appsystem.h  appsystemglobal.h  appsystemplugin.h  iapp.h  iapphost.h
ChuanQiAll/ui/appinterface/src/: appfactory.cpp  apploader.cpp  appsystemplugin.cpp  iapp.cpp
ChuanQiAll/ui/apps/: CMakeLists.txt
ChuanQiAll/ui/apps/appdemo/: CMakeLists.txt  appdemo.cpp  appdemo.h  appdemo.json  appdemo.qrc  appdemoAppSet.qml  appdemoMain.qml  appdemoSetting.qml  appplugindemo.cpp  appplugindemo.h
ChuanQiAll/ui/apps/fastfrequency/: CMakeLists.txt  fastfrequency.json  fastfrequency.qrc  fastfrequencyAppSet.qml  fastfrequencyMain.qml  fastfrequencySetting.qml
ChuanQiAll/ui/chuanqi/: CMakeLists.txt  chuanqi.qrc  main.cpp
ChuanQiAll/ui/chuanqi/inc/: apphost.h  command.h  commandserver.h  customformat.h  devicehandler.h  displayfilesystemmodel.h  getdevicedata.h  getdeviceinformation.h  graphicdraw.h  interface.h  listmodel.h  logoperations.h  pugixmlinterface.h  tablemodel.h  treeitem.h  treemodel.h
ChuanQiAll/ui/chuanqi/qml/: main.qml
ChuanQiAll/ui/chuanqi/src/: apphost.cpp  command.cpp  commandserver.cpp  customformat.cpp  graphicdraw.cpp  (+11 more)
ChuanQiAll/ui/sqlite3/: CMakeLists.txt
(+811 files in other folders)
